--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/Dereje-boy/cv_generator2#readme",
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "prisma": "^5.21.1"
   }
 }
